syntax = "proto3";

package link;
option go_package = "github.com/slip-slap-slop/redirect-svc/pkg/grpc;grpc";

service LinkService {
  rpc GetLink(GetLinkRequest) returns (GetLinkResponse);
  rpc ValidateLink(ValidateLinkRequest) returns (ValidateLinkResponse);
}

message GetLinkRequest {
  string short_code = 1;
}

message GetLinkResponse {
  string id = 1;
  string original_url = 2;
  string short_code = 3;
  string user_id = 4;
  int64 clicks = 5;
}

message ValidateLinkRequest {
  string short_code = 1;
}

message ValidateLinkResponse {
  bool valid = 1;
  string reason = 2;
}
